# flow_old

./: .#main.cpp  CMakeLists.txt  CorrectionTask.cpp  CorrectionTask.h  CorrelationTask.cpp  CorrelationTask.h  DataFiller.cpp  DataFiller.h  SimpleTask.cpp  SimpleTask.h  TestTask.cpp  TestTask.h  VarManager.h  main.cpp  rootlogon.C
Base/: DataContainer.h  QVector.h
Correlation/: CorrelationManager.cpp
DifferentialCorrection/: CorrectionManager.cpp
DifferentialCorrection/Interface/: DataFiller.cpp  DataFiller.h  VarManager.h
batch/30gev/: draw_Qn.C  rootlogon.C
batch/QnCorrections/: batch_run.sh  run.sh
cuts/: isGoodEvent.cpp  isGoodEvent.h  isGoodEventNA49.C  isGoodTrack.cpp  isGoodTrack.h  isGoodTrackNA49.C
datatreeqa/: DataTreeQA.cpp  DataTreeQA.h
macro/: datatree_qa.C  draw_graphs.C  draw_profiles.C  draw_v1.C  draw_v1_psd.C  draw_v2.C  graph_config.h  names.h  resolution.C  save_graphs.C  save_mult.C  save_profiles.C
macro/batch/: output.sh  run.sh  run_kronos.sh  run_qa.sh  set_path.sh
